[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/Assets/Images/Environment/tilesmap.png" type="Texture" id=1]
[ext_resource path="res://Game/Assets/Images/Shadow-8bits.png" type="Texture" id=2]
[ext_resource path="res://Game/GameScenes/Levels/ContextOfLevels.gd" type="Script" id=3]

[sub_resource type="TileSet" id=1]
0/name = "tilesmap.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilesmap.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tilesmap.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tilesmap.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 160, 32, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tilesmap.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 192, 32, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tilesmap.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 64, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tilesmap.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 96, 64, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tilesmap.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 128, 64, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tilesmap.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 160, 64, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tilesmap.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 192, 64, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=6]
0/name = "tilesmap.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilesmap.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilesmap.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tilesmap.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 64, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[node name="ContextOfLevels" type="Node2D"]
script = ExtResource( 3 )

[node name="CommonFloor" type="TileMap" parent="."]
modulate = Color( 0.505882, 0.505882, 0.466667, 1 )
light_mask = 3
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_mask = 10
format = 1
tile_data = PoolIntArray( 0, 9, 0, 1, 4, 0, 2, 8, 0, 3, 5, 0, 4, 8, 0, 5, 0, 0, 6, 3, 0, 7, 7, 0, 8, 0, 0, 9, 4, 0, 10, 5, 0, 11, 1, 0, 12, 7, 0, 13, 4, 0, 14, 9, 0, 15, 0, 0, 16, 9, 0, 17, 7, 0, 18, 6, 0, 19, 8, 0, 65536, 1, 0, 65537, 9, 0, 65538, 5, 0, 65539, 5, 0, 65540, 2, 0, 65541, 5, 0, 65542, 0, 0, 65543, 1, 0, 65544, 0, 0, 65545, 4, 0, 65546, 6, 0, 65547, 9, 0, 65548, 8, 0, 65549, 9, 0, 65550, 6, 0, 65551, 2, 0, 65552, 8, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 131072, 7, 0, 131073, 9, 0, 131074, 9, 0, 131075, 2, 0, 131076, 0, 0, 131077, 6, 0, 131078, 6, 0, 131079, 9, 0, 131080, 2, 0, 131081, 3, 0, 131082, 9, 0, 131083, 0, 0, 131084, 4, 0, 131085, 9, 0, 131086, 0, 0, 131087, 5, 0, 131088, 6, 0, 131089, 0, 0, 131090, 7, 0, 131091, 5, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 0, 0, 196612, 0, 0, 196613, 2, 0, 196614, 2, 0, 196615, 0, 0, 196616, 0, 0, 196617, 7, 0, 196618, 7, 0, 196619, 1, 0, 196620, 3, 0, 196621, 1, 0, 196622, 8, 0, 196623, 6, 0, 196624, 7, 0, 196625, 2, 0, 196626, 1, 0, 196627, 5, 0, 262144, 7, 0, 262145, 7, 0, 262146, 8, 0, 262147, 8, 0, 262148, 6, 0, 262149, 4, 0, 262150, 1, 0, 262151, 1, 0, 262152, 4, 0, 262153, 6, 0, 262154, 8, 0, 262155, 5, 0, 262156, 9, 0, 262157, 9, 0, 262158, 9, 0, 262159, 1, 0, 262160, 6, 0, 262161, 3, 0, 262162, 5, 0, 262163, 6, 0, 327680, 7, 0, 327681, 3, 0, 327682, 9, 0, 327683, 6, 0, 327684, 9, 0, 327685, 7, 0, 327686, 3, 0, 327687, 1, 0, 327688, 1, 0, 327689, 4, 0, 327690, 0, 0, 327691, 6, 0, 327692, 8, 0, 327693, 7, 0, 327694, 2, 0, 327695, 6, 0, 327696, 5, 0, 327697, 7, 0, 327698, 3, 0, 327699, 9, 0, 393216, 8, 0, 393217, 2, 0, 393218, 1, 0, 393219, 7, 0, 393220, 8, 0, 393221, 7, 0, 393222, 5, 0, 393223, 7, 0, 393224, 4, 0, 393225, 1, 0, 393226, 8, 0, 393227, 1, 0, 393228, 7, 0, 393229, 1, 0, 393230, 7, 0, 393231, 6, 0, 393232, 4, 0, 393233, 4, 0, 393234, 2, 0, 393235, 7, 0, 458752, 6, 0, 458753, 1, 0, 458754, 4, 0, 458755, 6, 0, 458756, 6, 0, 458757, 5, 0, 458758, 9, 0, 458759, 6, 0, 458760, 4, 0, 458761, 5, 0, 458762, 6, 0, 458763, 2, 0, 458764, 6, 0, 458765, 4, 0, 458766, 7, 0, 458767, 7, 0, 458768, 7, 0, 458769, 6, 0, 458770, 3, 0, 458771, 9, 0, 524288, 1, 0, 524289, 6, 0, 524290, 8, 0, 524291, 6, 0, 524292, 9, 0, 524293, 2, 0, 524294, 6, 0, 524295, 0, 0, 524296, 0, 0, 524297, 4, 0, 524298, 3, 0, 524299, 8, 0, 524300, 8, 0, 524301, 6, 0, 524302, 7, 0, 524303, 9, 0, 524304, 6, 0, 524305, 8, 0, 524306, 3, 0, 524307, 3, 0, 589824, 3, 0, 589825, 0, 0, 589826, 4, 0, 589827, 0, 0, 589828, 4, 0, 589829, 4, 0, 589830, 8, 0, 589831, 4, 0, 589832, 9, 0, 589833, 3, 0, 589834, 2, 0, 589835, 5, 0, 589836, 9, 0, 589837, 4, 0, 589838, 6, 0, 589839, 6, 0, 589840, 2, 0, 589841, 0, 0, 589842, 0, 0, 589843, 4, 0, 655360, 6, 0, 655361, 6, 0, 655362, 4, 0, 655363, 7, 0, 655364, 0, 0, 655365, 9, 0, 655366, 4, 0, 655367, 3, 0, 655368, 9, 0, 655369, 4, 0, 655370, 2, 0, 655371, 3, 0, 655372, 8, 0, 655373, 9, 0, 655374, 7, 0, 655375, 9, 0, 655376, 9, 0, 655377, 3, 0, 655378, 0, 0, 655379, 2, 0, 720896, 4, 0, 720897, 0, 0, 720898, 2, 0, 720899, 5, 0, 720900, 4, 0, 720901, 6, 0, 720902, 4, 0, 720903, 1, 0, 720904, 6, 0, 720905, 3, 0, 720906, 0, 0, 720907, 4, 0, 720908, 2, 0, 720909, 3, 0, 720910, 4, 0, 720911, 9, 0, 720912, 3, 0, 720913, 2, 0, 720914, 0, 0, 720915, 2, 0, 786432, 4, 0, 786433, 9, 0, 786434, 8, 0, 786435, 6, 0, 786436, 8, 0, 786437, 3, 0, 786438, 9, 0, 786439, 1, 0, 786440, 2, 0, 786441, 6, 0, 786442, 7, 0, 786443, 4, 0, 786444, 5, 0, 786445, 6, 0, 786446, 4, 0, 786447, 5, 0, 786448, 2, 0, 786449, 6, 0, 786450, 5, 0, 786451, 0, 0, 851968, 1, 0, 851969, 1, 0, 851970, 9, 0, 851971, 4, 0, 851972, 2, 0, 851973, 6, 0, 851974, 0, 0, 851975, 3, 0, 851976, 7, 0, 851977, 0, 0, 851978, 6, 0, 851979, 1, 0, 851980, 6, 0, 851981, 0, 0, 851982, 1, 0, 851983, 5, 0, 851984, 4, 0, 851985, 8, 0, 851986, 1, 0, 851987, 5, 0, 917504, 6, 0, 917505, 8, 0, 917506, 9, 0, 917507, 4, 0, 917508, 4, 0, 917509, 9, 0, 917510, 3, 0, 917511, 5, 0, 917512, 2, 0, 917513, 5, 0, 917514, 8, 0, 917515, 9, 0, 917516, 7, 0, 917517, 1, 0, 917518, 0, 0, 917519, 2, 0, 917520, 4, 0, 917521, 7, 0, 917522, 0, 0, 917523, 5, 0, 983040, 0, 0, 983041, 4, 0, 983042, 6, 0, 983043, 1, 0, 983044, 0, 0, 983045, 5, 0, 983046, 0, 0, 983047, 2, 0, 983048, 6, 0, 983049, 7, 0, 983050, 9, 0, 983051, 4, 0, 983052, 2, 0, 983053, 4, 0, 983054, 1, 0, 983055, 5, 0, 983056, 4, 0, 983057, 6, 0, 983058, 4, 0, 983059, 7, 0, 1048576, 4, 0, 1048577, 5, 0, 1048578, 6, 0, 1048579, 8, 0, 1048580, 0, 0, 1048581, 5, 0, 1048582, 8, 0, 1048583, 9, 0, 1048584, 4, 0, 1048585, 1, 0, 1048586, 0, 0, 1048587, 7, 0, 1048588, 6, 0, 1048589, 2, 0, 1048590, 3, 0, 1048591, 1, 0, 1048592, 2, 0, 1048593, 1, 0, 1048594, 2, 0, 1048595, 9, 0, 1114112, 2, 0, 1114113, 7, 0, 1114114, 4, 0, 1114115, 7, 0, 1114116, 5, 0, 1114117, 6, 0, 1114118, 6, 0, 1114119, 0, 0, 1114120, 1, 0, 1114121, 0, 0, 1114122, 6, 0, 1114123, 6, 0, 1114124, 6, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 7, 0, 1114128, 9, 0, 1114129, 1, 0, 1114130, 5, 0, 1114131, 0, 0, 1179648, 7, 0, 1179649, 9, 0, 1179650, 5, 0, 1179651, 2, 0, 1179652, 8, 0, 1179653, 8, 0, 1179654, 2, 0, 1179655, 4, 0, 1179656, 6, 0, 1179657, 7, 0, 1179658, 8, 0, 1179659, 9, 0, 1179660, 5, 0, 1179661, 9, 0, 1179662, 2, 0, 1179663, 0, 0, 1179664, 4, 0, 1179665, 6, 0, 1179666, 5, 0, 1179667, 4, 0, 1245184, 5, 0, 1245185, 7, 0, 1245186, 2, 0, 1245187, 9, 0, 1245188, 8, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 8, 0, 1245192, 7, 0, 1245193, 8, 0, 1245194, 6, 0, 1245195, 1, 0, 1245196, 9, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 9, 0, 1245200, 7, 0, 1245201, 4, 0, 1245202, 8, 0, 1245203, 3, 0 )

[node name="OuterWalls" type="TileMap" parent="."]
modulate = Color( 0.541176, 0.521569, 0.396078, 1 )
light_mask = 3
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_mask = 10
occluder_light_mask = 3
format = 1
tile_data = PoolIntArray( -262149, 1, 0, -262148, 3, 0, -262147, 3, 0, -262146, 1, 0, -262145, 1, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 1, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 3, 0, -327672, 1, 0, -327671, 2, 0, -327670, 2, 0, -327669, 0, 0, -327668, 2, 0, -327667, 0, 0, -327666, 0, 0, -327665, 2, 0, -327664, 2, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 1, 0, -327659, 3, 0, -327658, 2, 0, -327657, 3, 0, -327656, 0, 0, -196613, 2, 0, -196612, 3, 0, -196611, 1, 0, -196610, 0, 0, -196609, 1, 0, -262144, 0, 0, -262143, 1, 0, -262142, 1, 0, -262141, 3, 0, -262140, 2, 0, -262139, 0, 0, -262138, 3, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 3, 0, -262132, 0, 0, -262131, 3, 0, -262130, 2, 0, -262129, 3, 0, -262128, 0, 0, -262127, 1, 0, -262126, 2, 0, -262125, 3, 0, -262124, 2, 0, -262123, 2, 0, -262122, 2, 0, -262121, 3, 0, -262120, 1, 0, -131077, 2, 0, -131076, 0, 0, -131075, 3, 0, -131074, 2, 0, -131073, 1, 0, -196608, 3, 0, -196607, 1, 0, -196606, 3, 0, -196605, 2, 0, -196604, 1, 0, -196603, 1, 0, -196602, 0, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 2, 0, -196597, 2, 0, -196596, 1, 0, -196595, 2, 0, -196594, 2, 0, -196593, 2, 0, -196592, 1, 0, -196591, 3, 0, -196590, 0, 0, -196589, 1, 0, -196588, 3, 0, -196587, 3, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -65541, 3, 0, -65540, 3, 0, -65539, 2, 0, -65538, 0, 0, -65537, 0, 0, -131072, 2, 0, -131071, 2, 0, -131070, 3, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 2, 0, -131063, 3, 0, -131062, 0, 0, -131061, 2, 0, -131060, 3, 0, -131059, 3, 0, -131058, 0, 0, -131057, 1, 0, -131056, 1, 0, -131055, 0, 0, -131054, 1, 0, -131053, 3, 0, -131052, 2, 0, -131051, 0, 0, -131050, 2, 0, -131049, 3, 0, -131048, 0, 0, -5, 1, 0, -4, 2, 0, -3, 2, 0, -2, 1, 0, -1, 0, 0, -65536, 2, 0, -65535, 1, 0, -65534, 1, 0, -65533, 0, 0, -65532, 3, 0, -65531, 2, 0, -65530, 0, 0, -65529, 0, 0, -65528, 2, 0, -65527, 0, 0, -65526, 3, 0, -65525, 0, 0, -65524, 0, 0, -65523, 2, 0, -65522, 1, 0, -65521, 0, 0, -65520, 0, 0, -65519, 1, 0, -65518, 3, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 0, 0, -65513, 3, 0, -65512, 0, 0, 65531, 3, 0, 65532, 0, 0, 65533, 3, 0, 65534, 3, 0, 65535, 0, 0, 20, 2, 0, 21, 0, 0, 22, 0, 0, 23, 3, 0, 24, 3, 0, 131067, 2, 0, 131068, 1, 0, 131069, 2, 0, 131070, 0, 0, 131071, 1, 0, 65556, 1, 0, 65557, 0, 0, 65558, 1, 0, 65559, 2, 0, 65560, 0, 0, 196603, 0, 0, 196604, 2, 0, 196605, 3, 0, 196606, 3, 0, 196607, 1, 0, 131092, 3, 0, 131093, 3, 0, 131094, 1, 0, 131095, 3, 0, 131096, 2, 0, 262139, 2, 0, 262140, 1, 0, 262141, 3, 0, 262142, 0, 0, 262143, 1, 0, 196628, 2, 0, 196629, 1, 0, 196630, 2, 0, 196631, 2, 0, 196632, 1, 0, 327675, 1, 0, 327676, 3, 0, 327677, 3, 0, 327678, 2, 0, 327679, 3, 0, 262164, 3, 0, 262165, 0, 0, 262166, 1, 0, 262167, 1, 0, 262168, 3, 0, 393211, 2, 0, 393212, 0, 0, 393213, 3, 0, 393214, 1, 0, 393215, 1, 0, 327700, 0, 0, 327701, 1, 0, 327702, 3, 0, 327703, 3, 0, 327704, 2, 0, 458747, 1, 0, 458748, 0, 0, 458749, 2, 0, 458750, 3, 0, 458751, 2, 0, 393236, 1, 0, 393237, 2, 0, 393238, 1, 0, 393239, 1, 0, 393240, 2, 0, 524283, 1, 0, 524284, 0, 0, 524285, 2, 0, 524286, 2, 0, 524287, 2, 0, 458772, 0, 0, 458773, 0, 0, 458774, 1, 0, 458775, 0, 0, 458776, 3, 0, 589819, 2, 0, 589820, 1, 0, 589821, 2, 0, 589822, 2, 0, 589823, 3, 0, 524308, 1, 0, 524309, 3, 0, 524310, 3, 0, 524311, 2, 0, 524312, 2, 0, 655355, 2, 0, 655356, 1, 0, 655357, 0, 0, 655358, 1, 0, 655359, 3, 0, 589844, 1, 0, 589845, 1, 0, 589846, 0, 0, 589847, 0, 0, 589848, 3, 0, 720891, 0, 0, 720892, 3, 0, 720893, 2, 0, 720894, 0, 0, 720895, 3, 0, 655380, 0, 0, 655381, 2, 0, 655382, 0, 0, 655383, 3, 0, 655384, 3, 0, 786427, 3, 0, 786428, 1, 0, 786429, 1, 0, 786430, 0, 0, 786431, 1, 0, 720916, 0, 0, 720917, 3, 0, 720918, 1, 0, 720919, 1, 0, 720920, 3, 0, 851963, 2, 0, 851964, 3, 0, 851965, 2, 0, 851966, 0, 0, 851967, 3, 0, 786452, 3, 0, 786453, 0, 0, 786454, 2, 0, 786455, 3, 0, 786456, 3, 0, 917499, 2, 0, 917500, 1, 0, 917501, 2, 0, 917502, 1, 0, 917503, 1, 0, 851988, 3, 0, 851989, 2, 0, 851990, 0, 0, 851991, 1, 0, 851992, 1, 0, 983035, 2, 0, 983036, 3, 0, 983037, 1, 0, 983038, 3, 0, 983039, 3, 0, 917524, 2, 0, 917525, 1, 0, 917526, 3, 0, 917527, 0, 0, 917528, 1, 0, 1048571, 3, 0, 1048572, 0, 0, 1048573, 2, 0, 1048574, 0, 0, 1048575, 0, 0, 983060, 2, 0, 983061, 0, 0, 983062, 0, 0, 983063, 2, 0, 983064, 3, 0, 1114107, 3, 0, 1114108, 1, 0, 1114109, 0, 0, 1114110, 1, 0, 1114111, 0, 0, 1048596, 0, 0, 1048597, 3, 0, 1048598, 1, 0, 1048599, 2, 0, 1048600, 3, 0, 1179643, 0, 0, 1179644, 3, 0, 1179645, 3, 0, 1179646, 0, 0, 1179647, 0, 0, 1114132, 3, 0, 1114133, 3, 0, 1114134, 0, 0, 1114135, 1, 0, 1114136, 2, 0, 1245179, 2, 0, 1245180, 0, 0, 1245181, 2, 0, 1245182, 1, 0, 1245183, 3, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 2, 0, 1179671, 3, 0, 1179672, 3, 0, 1310715, 3, 0, 1310716, 0, 0, 1310717, 1, 0, 1310718, 0, 0, 1310719, 2, 0, 1245204, 2, 0, 1245205, 1, 0, 1245206, 0, 0, 1245207, 2, 0, 1245208, 0, 0, 1376251, 2, 0, 1376252, 0, 0, 1376253, 2, 0, 1376254, 0, 0, 1376255, 2, 0, 1310720, 3, 0, 1310721, 3, 0, 1310722, 3, 0, 1310723, 1, 0, 1310724, 0, 0, 1310725, 3, 0, 1310726, 0, 0, 1310727, 2, 0, 1310728, 3, 0, 1310729, 3, 0, 1310730, 0, 0, 1310731, 3, 0, 1310732, 0, 0, 1310733, 3, 0, 1310734, 2, 0, 1310735, 3, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 2, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 1, 0, 1310743, 3, 0, 1310744, 2, 0, 1441787, 3, 0, 1441788, 3, 0, 1441789, 1, 0, 1441790, 3, 0, 1441791, 3, 0, 1376256, 1, 0, 1376257, 0, 0, 1376258, 2, 0, 1376259, 0, 0, 1376260, 3, 0, 1376261, 3, 0, 1376262, 0, 0, 1376263, 1, 0, 1376264, 3, 0, 1376265, 3, 0, 1376266, 1, 0, 1376267, 0, 0, 1376268, 2, 0, 1376269, 3, 0, 1376270, 0, 0, 1376271, 2, 0, 1376272, 0, 0, 1376273, 1, 0, 1376274, 0, 0, 1376275, 3, 0, 1376276, 0, 0, 1376277, 2, 0, 1376278, 2, 0, 1376279, 1, 0, 1376280, 2, 0, 1507323, 3, 0, 1507324, 2, 0, 1507325, 2, 0, 1507326, 2, 0, 1507327, 0, 0, 1441792, 3, 0, 1441793, 3, 0, 1441794, 0, 0, 1441795, 3, 0, 1441796, 3, 0, 1441797, 2, 0, 1441798, 3, 0, 1441799, 1, 0, 1441800, 3, 0, 1441801, 1, 0, 1441802, 3, 0, 1441803, 1, 0, 1441804, 2, 0, 1441805, 0, 0, 1441806, 2, 0, 1441807, 1, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 1, 0, 1441811, 0, 0, 1441812, 2, 0, 1441813, 2, 0, 1441814, 2, 0, 1441815, 3, 0, 1441816, 0, 0, 1572859, 0, 0, 1572860, 0, 0, 1572861, 2, 0, 1572862, 0, 0, 1572863, 3, 0, 1507328, 2, 0, 1507329, 2, 0, 1507330, 0, 0, 1507331, 3, 0, 1507332, 1, 0, 1507333, 0, 0, 1507334, 1, 0, 1507335, 1, 0, 1507336, 3, 0, 1507337, 1, 0, 1507338, 0, 0, 1507339, 2, 0, 1507340, 2, 0, 1507341, 3, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 3, 0, 1507345, 1, 0, 1507346, 2, 0, 1507347, 0, 0, 1507348, 2, 0, 1507349, 1, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 3, 0, 1638395, 0, 0, 1638396, 2, 0, 1638397, 2, 0, 1638398, 3, 0, 1638399, 1, 0, 1572864, 0, 0, 1572865, 3, 0, 1572866, 2, 0, 1572867, 0, 0, 1572868, 2, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 2, 0, 1572872, 1, 0, 1572873, 0, 0, 1572874, 2, 0, 1572875, 3, 0, 1572876, 1, 0, 1572877, 0, 0, 1572878, 1, 0, 1572879, 0, 0, 1572880, 3, 0, 1572881, 0, 0, 1572882, 3, 0, 1572883, 2, 0, 1572884, 2, 0, 1572885, 0, 0, 1572886, 2, 0, 1572887, 1, 0, 1572888, 0, 0 )

[node name="OuterWalls_Shadows" type="NinePatchRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
light_mask = 0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -160.0
margin_right = 800.0
margin_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 320, 320 )
current = true
zoom = Vector2( 2, 2 )
